analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/setterWithoutBodyOnValPropertyWithSyntaxErrors.kt
internal abstract class Bug {
    val prop = 42
    <expr>set cod

    protected abstract fun toStringCompact(): String</expr>
}